--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -114,15 +114,18 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}-s6
+          flavor: |
+            latest=auto
+          tags: |
+            # ex. version is 1.2.3
+            type=pep440,pattern={{version}} # 1.2.3
+            type=pep440,pattern={{major}} # 1
 
-      - name: Get git tag
-        id: vars
-        run: |
-          T=${GITHUB_REF#refs/*/}
-          M=${T%%.*}
-          echo "GIT_TAG=$T" >> $GITHUB_ENV
-          echo "MAJOR_TAG=$M" >> $GITHUB_ENV
+            # Single arch tagging
+            # ex. arch is amd64
+            type=pep440,pattern={{version}},suffix=-${{ matrix.job.name }} # 1.2.3-amd64
+            type=pep440,pattern={{major}},suffix=-${{ matrix.job.name }} # 1-amd64 
+          images: ghcr.io/${{ github.repository }}-s6
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -133,71 +136,8 @@ jobs:
           provenance: false
           build-args: |
             S6_ARCH=${{ matrix.job.s6_platform }}
-          tags: |
-            ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}-${{ matrix.job.name }}
-            ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}-${{ matrix.job.name }}
-            ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}-${{ matrix.job.name }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  # Set up minifest and tag for pushed image
-  create-s6-overlay-images-manifest:
-    name: Manifest for s6-overlay images
-    needs: create-s6-overlay-images
-    runs-on: ubuntu-24.04
-
-    steps:
-      - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get git tag
-        id: vars
-        run: |
-          T=${GITHUB_REF#refs/*/}
-          M=${T%%.*}
-          echo "GIT_TAG=$T" >> $GITHUB_ENV
-          echo "MAJOR_TAG=$M" >> $GITHUB_ENV
-
-      # Create and push manifest for :ve.rs.ion tag
-      - name: Create and push manifest (:ve.rs.ion)
-        uses: Noelware/docker-manifest-action@master
-        if: github.event_name != 'workflow_dispatch'
-        with:
-          base-image: ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}-s6:${{ env.GIT_TAG }}-i386
-          push: true
-
-      # Create and push manifest for :major tag
-      - name: Create and push manifest (:major)
-        uses: Noelware/docker-manifest-action@master
-        with:
-          base-image: ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}-s6:${{ env.MAJOR_TAG }}-i386
-          push: true
-
-      # Create and push manifest for :latest tag
-      - name: Create and push manifest (:latest)
-        uses: Noelware/docker-manifest-action@master
-        with:
-          base-image: ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}-s6:${{ env.LATEST_TAG }}-i386
-          push: true
 
   # Build and push single-arch Docker images to ghcr.io
   create-classic-images:
@@ -245,15 +185,18 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          flavor: |
+            latest=auto
+          tags: |
+            # ex. version is 1.2.3
+            type=pep440,pattern={{version}} # 1.2.3
+            type=pep440,pattern={{major}} # 1
 
-      - name: Get git tag
-        id: vars
-        run: |
-          T=${GITHUB_REF#refs/*/}
-          M=${T%%.*}
-          echo "GIT_TAG=$T" >> $GITHUB_ENV
-          echo "MAJOR_TAG=$M" >> $GITHUB_ENV
+            # Single arch tagging
+            # ex. arch is amd64
+            type=pep440,pattern={{version}},suffix=-${{ matrix.job.name }} # 1.2.3-amd64
+            type=pep440,pattern={{major}},suffix=-${{ matrix.job.name }} # 1-amd64 
+          images: ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -262,68 +205,5 @@ jobs:
           platforms: ${{ matrix.job.docker_platform }}
           push: true
           provenance: false
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}-${{ matrix.job.name }}
-            ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}-${{ matrix.job.name }}
-            ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}-${{ matrix.job.name }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  # Set up minifest and tag for pushed image
-  create-classic-images-manifest:
-    name: Manifest for classic images
-    needs: create-classic-images
-    runs-on: ubuntu-24.04
-
-    steps:
-      - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get git tag
-        id: vars
-        run: |
-          T=${GITHUB_REF#refs/*/}
-          M=${T%%.*}
-          echo "GIT_TAG=$T" >> $GITHUB_ENV
-          echo "MAJOR_TAG=$M" >> $GITHUB_ENV
-
-      # Create and push manifest for :ve.rs.ion tag
-      - name: Create and push manifest (:ve.rs.ion)
-        uses: Noelware/docker-manifest-action@master
-        if: github.event_name != 'workflow_dispatch'
-        with:
-          base-image: ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}:${{ env.GIT_TAG }}-i386
-          push: true
-
-      # Create and push manifest for :major tag
-      - name: Create and push manifest (:major)
-        uses: Noelware/docker-manifest-action@master
-        with:
-          base-image: ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}:${{ env.MAJOR_TAG }}-i386
-          push: true
-
-      # Create and push manifest for :latest tag
-      - name: Create and push manifest (:latest)
-        uses: Noelware/docker-manifest-action@master
-        with:
-          base-image: ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}
-          extra-images: |
-            ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}-amd64,
-            ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}-arm64v8,
-            ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}-armv7,
-            ghcr.io/${{ github.repository }}:${{ env.LATEST_TAG }}-i386
-          push: true
